# ParcerShopAPI

./: .gitignore  pyproject.toml
docker/: Dockerfile  docker-compose.yml
nginx/: Dockerfile  nginx.conf
src/: __main__.py  app_object.py  catch_exception_middleware.py  get_file_router.py  redis_service.py
src/config/: __init__.py  config.py  env.py
src/utils/: __init__.py  download_items_job.py  download_products_job.py  items_file_downloader.py  products_file_downloader.py  sima_land_api.py
