[tool.poetry]
name = "parcershopapi"
version = "0.1.0"
description = "Parcer for shop from JSON to XML"
authors = ["qiisqwww qiisqwww@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
fastapi = {extras = ["all"], version = "^0.112.0"}
requests = "^2.32.3"
apscheduler = "^3.10.4"
redis = "^5.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
